Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.6(EOL), 10.10(EOL), 10.11, 11.0(EOL), 11.1(EOL), 11.2(EOL)
Description
The failure happens upon crash recovery.
2023-08-28 14:46:25 0 [Note] InnoDB: Starting crash recovery from checkpoint LSN=54805
|
2023-08-28 14:46:26 0 [Note] InnoDB: End of log at LSN=30467662
|
2023-08-28 14:46:26 0 [Note] InnoDB: To recover: 6392 pages
|
mysqld: /data/MDEV-32029/11.2/storage/innobase/log/log0recv.cc:3721: log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)>: Assertion `l > 2' failed.
|
230828 14:46:29 [ERROR] mysqld got signal 6 ;
|
|
11.2 9ad7c899ac51ee7959f312a84402bb2082fa5e56 |
(rr) bt
|
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
#1 0x00001f1f49180859 in __GI_abort () at abort.c:79
|
#2 0x00001f1f49180729 in __assert_fail_base (fmt=0x1f1f49316588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x56341f5358a0 "l > 2",
|
file=0x56341f52fd80 "/data/MDEV-32029/11.2/storage/innobase/log/log0recv.cc", line=3721, function=<optimized out>) at assert.c:92
|
#3 0x00001f1f49191fd6 in __GI___assert_fail (assertion=0x56341f5358a0 "l > 2", file=0x56341f52fd80 "/data/MDEV-32029/11.2/storage/innobase/log/log0recv.cc", line=3721,
|
function=0x56341f5358e0 "log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)>") at assert.c:101
|
#4 0x000056341df7de41 in <lambda(const buf_page_t*, const buf_page_t*)>::operator()(const buf_page_t *, const buf_page_t *) const (__closure=0x7ffc83eaa110, lhs=0x35a95e269c20, rhs=0x4f9c5ff60a30)
|
at /data/MDEV-32029/11.2/storage/innobase/log/log0recv.cc:3721
|
#5 0x000056341df8b3e2 in __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> >::operator()<buf_page_t**, buf_page_t**>(buf_page_t **, buf_page_t **) (
|
this=0x7ffc83eaa110, __it1=0x62f000000408, __it2=0x62f0000046d8) at /usr/include/c++/9/bits/predefined_ops.h:143
|
#6 0x000056341df8b044 in std::__move_median_to_first<buf_page_t**, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> > >(buf_page_t **, buf_page_t **, buf_page_t **, buf_page_t **, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> >) (__result=0x62f000000400, __a=0x62f000000408, __b=0x62f0000046d8,
|
__c=0x62f0000089a8, __comp=...) at /usr/include/c++/9/bits/stl_algo.h:81
|
#7 0x000056341df8a84e in std::__unguarded_partition_pivot<buf_page_t**, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> > >(buf_page_t **, buf_page_t **, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> >) (__first=0x62f000000400, __last=0x62f0000089b0,
|
__comp=<error reading variable: Cannot access memory at address 0xffffffffffffffc0>) at /usr/include/c++/9/bits/stl_algo.h:1926
|
#8 0x000056341df89c20 in std::__introsort_loop<buf_page_t**, long int, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> > >(buf_page_t **, buf_page_t **, long, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> >) (__first=0x62f000000400, __last=0x62f0000089b0, __depth_limit=23,
|
__comp=<error reading variable: Cannot access memory at address 0xffffffffffffffc0>) at /usr/include/c++/9/bits/stl_algo.h:1958
|
#9 0x000056341df88280 in std::__sort<buf_page_t**, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> > >(buf_page_t **, buf_page_t **, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> >) (__first=0x62f000000400, __last=0x62f0000089b0,
|
__comp=<error reading variable: Cannot access memory at address 0xffffffffffffffc0>) at /usr/include/c++/9/bits/stl_algo.h:1973
|
#10 0x000056341df871da in std::sort<buf_page_t**, log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> >(buf_page_t **, buf_page_t **, <lambda(const buf_page_t*, const buf_page_t*)>) (
|
__first=0x62f000000400, __last=0x62f0000089b0, __comp=<error reading variable: Cannot access memory at address 0xffffffffffffffc0>) at /usr/include/c++/9/bits/stl_algo.h:4905
|
#11 0x000056341df7e273 in log_sort_flush_list () at /data/MDEV-32029/11.2/storage/innobase/log/log0recv.cc:3717
|
#12 0x000056341df7fe69 in recv_sys_t::apply (this=0x56342061aa40 <recv_sys>, last_batch=true) at /data/MDEV-32029/11.2/storage/innobase/log/log0recv.cc:3881
|
#13 0x000056341e22fc49 in srv_start (create_new_db=false) at /data/MDEV-32029/11.2/storage/innobase/srv/srv0start.cc:1577
|
#14 0x000056341ddb876c in innodb_init (p=0x615000002618) at /data/MDEV-32029/11.2/storage/innobase/handler/ha_innodb.cc:4171
|
#15 0x000056341d5f8c15 in ha_initialize_handlerton (plugin=0x6210000c1f00) at /data/MDEV-32029/11.2/sql/handler.cc:693
|
#16 0x000056341cdc06e3 in plugin_do_initialize (plugin=0x6210000c1f00, state=@0x7ffc83ead2c0: 4) at /data/MDEV-32029/11.2/sql/sql_plugin.cc:1453
|
#17 0x000056341cdc0ed3 in plugin_initialize (tmp_root=0x7ffc83ead9d0, plugin=0x6210000c1f00, argc=0x563420b59720 <remaining_argc>, argv=0x616000000788, options_only=false)
|
at /data/MDEV-32029/11.2/sql/sql_plugin.cc:1506
|
#18 0x000056341cdc2822 in plugin_init (argc=0x563420b59720 <remaining_argc>, argv=0x616000000788, flags=0) at /data/MDEV-32029/11.2/sql/sql_plugin.cc:1765
|
#19 0x000056341ca0f707 in init_server_components () at /data/MDEV-32029/11.2/sql/mysqld.cc:5271
|
#20 0x000056341ca11213 in mysqld_main (argc=30, argv=0x616000000788) at /data/MDEV-32029/11.2/sql/mysqld.cc:5900
|
#21 0x000056341c9ff1dd in main (argc=29, argv=0x7ffc83eb0528) at /data/MDEV-32029/11.2/sql/main.cc:34
|
Other observed apparently related failures are
|
11.1 e6ec2b3b |
mysqld: /home/vsts/src/storage/innobase/log/log0recv.cc:3715: log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)>: Assertion `r > 2' failed.
|
230828 7:00:22 [ERROR] mysqld got signal 6 ;
|
|
|
#7 0x00007fdeeb4edfd6 in __GI___assert_fail (assertion=0x5584a80ddfc0 "r > 2", file=0x5584a80d8800 "/home/vsts/src/storage/innobase/log/log0recv.cc", line=3715, function=0x5584a80ddf40 "log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)>") at assert.c:101
|
#8 0x00005584a6afc56c in <lambda(const buf_page_t*, const buf_page_t*)>::operator()(const buf_page_t *, const buf_page_t *) const (__closure=0x7ffc55722770, lhs=0x7fded01aed30, rhs=0x7fded17ab6c0) at /home/vsts/src/storage/innobase/log/log0recv.cc:3715
|
#9 0x00005584a6b09386 in __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> >::operator()<buf_page_t**, buf_page_t**>(buf_page_t **, buf_page_t **) (this=0x7ffc55722770, __it1=0x630000010400, __it2=0x630000019008) at /usr/include/c++/9/bits/predefined_ops.h:143
|
#10 0x00005584a6b0926b in std::__unguarded_partition<buf_page_t**, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> > >(buf_page_t **, buf_page_t **, buf_page_t **, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> >) (__first=0x630000017db8, __last=0x630000019008, __pivot=0x630000010400, __comp=...) at /usr/include/c++/9/bits/stl_algo.h:1910
|
#11 0x00005584a6b08816 in std::__unguarded_partition_pivot<buf_page_t**, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> > >(buf_page_t **, buf_page_t **, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> >) (__first=0x630000010400, __last=0x63000001c1c8, __comp=<error reading variable: Cannot access memory at address 0xffffffffffffffc0>) at /usr/include/c++/9/bits/stl_algo.h:1928
|
#12 0x00005584a6b07bc0 in std::__introsort_loop<buf_page_t**, long int, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> > >(buf_page_t **, buf_page_t **, long, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> >) (__first=0x630000010400, __last=0x63000001c1c8, __depth_limit=23, __comp=<error reading variable: Cannot access memory at address 0xffffffffffffffc0>) at /usr/include/c++/9/bits/stl_algo.h:1958
|
#13 0x00005584a6b06206 in std::__sort<buf_page_t**, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> > >(buf_page_t **, buf_page_t **, __gnu_cxx::__ops::_Iter_comp_iter<log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> >) (__first=0x630000010400, __last=0x63000001c1c8, __comp=<error reading variable: Cannot access memory at address 0xffffffffffffffc0>) at /usr/include/c++/9/bits/stl_algo.h:1973
|
#14 0x00005584a6b0510a in std::sort<buf_page_t**, log_sort_flush_list()::<lambda(const buf_page_t*, const buf_page_t*)> >(buf_page_t **, buf_page_t **, <lambda(const buf_page_t*, const buf_page_t*)>) (__first=0x630000010400, __last=0x63000001c1c8, __comp=<error reading variable: Cannot access memory at address 0xffffffffffffffc0>) at /usr/include/c++/9/bits/stl_algo.h:4905
|
#15 0x00005584a6afc92f in log_sort_flush_list () at /home/vsts/src/storage/innobase/log/log0recv.cc:3711
|
#16 0x00005584a6afe009 in recv_sys_t::apply (this=0x5584a93e7240 <recv_sys>, last_batch=true) at /home/vsts/src/storage/innobase/log/log0recv.cc:3851
|
#17 0x00005584a6db14e6 in srv_start (create_new_db=false) at /home/vsts/src/storage/innobase/srv/srv0start.cc:1577
|
#18 0x00005584a6930386 in innodb_init (p=0x615000003298) at /home/vsts/src/storage/innobase/handler/ha_innodb.cc:4171
|
#19 0x00005584a603faf7 in ha_initialize_handlerton (plugin=0x6210000c0b00) at /home/vsts/src/sql/handler.cc:693
|
#20 0x00005584a58119f5 in plugin_do_initialize (plugin=0x6210000c0b00, state=@0x7ffc55725910: 4) at /home/vsts/src/sql/sql_plugin.cc:1453
|
#21 0x00005584a58121f1 in plugin_initialize (tmp_root=0x7ffc55726020, plugin=0x6210000c0b00, argc=0x5584a995f2e0 <remaining_argc>, argv=0x616000000a88, options_only=false) at /home/vsts/src/sql/sql_plugin.cc:1506
|
#22 0x00005584a5813c10 in plugin_init (argc=0x5584a995f2e0 <remaining_argc>, argv=0x616000000a88, flags=0) at /home/vsts/src/sql/sql_plugin.cc:1765
|
#23 0x00005584a54463fb in init_server_components () at /home/vsts/src/sql/mysqld.cc:5252
|
#24 0x00005584a5448352 in mysqld_main (argc=25, argv=0x616000000a88) at /home/vsts/src/sql/mysqld.cc:5881
|
#25 0x00005584a54320cd in main (argc=24, argv=0x7ffc55728b88) at /home/vsts/src/sql/main.cc:34
|
|
11.1 e6ec2b3b |
mysqld: /home/vsts/src/storage/innobase/log/log0recv.cc:3724: void log_sort_flush_list(): Assertion `list[i]->oldest_modification() > 2' failed.
|
230828 5:52:31 [ERROR] mysqld got signal 6 ;
|
|
|
#7 0x00007fd9c9930fd6 in __GI___assert_fail (assertion=0x55598ad4f0c0 "list[i]->oldest_modification() > 2", file=0x55598ad49800 "/home/vsts/src/storage/innobase/log/log0recv.cc", line=3724, function=0x55598ad4f080 "void log_sort_flush_list()") at assert.c:101
|
#8 0x000055598976dbce in log_sort_flush_list () at /home/vsts/src/storage/innobase/log/log0recv.cc:3724
|
#9 0x000055598976f009 in recv_sys_t::apply (this=0x55598c058240 <recv_sys>, last_batch=true) at /home/vsts/src/storage/innobase/log/log0recv.cc:3851
|
#10 0x0000555989a224e6 in srv_start (create_new_db=false) at /home/vsts/src/storage/innobase/srv/srv0start.cc:1577
|
#11 0x00005559895a1386 in innodb_init (p=0x615000003298) at /home/vsts/src/storage/innobase/handler/ha_innodb.cc:4171
|
#12 0x0000555988cb0af7 in ha_initialize_handlerton (plugin=0x6210000c0b00) at /home/vsts/src/sql/handler.cc:693
|
#13 0x00005559884829f5 in plugin_do_initialize (plugin=0x6210000c0b00, state=@0x7fffd82af9d0: 4) at /home/vsts/src/sql/sql_plugin.cc:1453
|
#14 0x00005559884831f1 in plugin_initialize (tmp_root=0x7fffd82b0120, plugin=0x6210000c0b00, argc=0x55598c5d02e0 <remaining_argc>, argv=0x616000000a88, options_only=false) at /home/vsts/src/sql/sql_plugin.cc:1506
|
#15 0x0000555988484c10 in plugin_init (argc=0x55598c5d02e0 <remaining_argc>, argv=0x616000000a88, flags=0) at /home/vsts/src/sql/sql_plugin.cc:1765
|
#16 0x00005559880b73fb in init_server_components () at /home/vsts/src/sql/mysqld.cc:5252
|
#17 0x00005559880b9352 in mysqld_main (argc=26, argv=0x616000000a88) at /home/vsts/src/sql/mysqld.cc:5881
|
#18 0x00005559880a30cd in main (argc=25, argv=0x7fffd82b2c88) at /home/vsts/src/sql/main.cc:34
|
Attachments
Issue Links
- causes
-
MDEV-33508 Performance regression due to frequent scan of full buf_pool.flush_list
-
- Closed
-
- is caused by
-
MDEV-26827 Make page flushing even faster
-
- Closed
-
- relates to
-
MDEV-25113 Reduce effect of parallel background flush on select workload
-
- Closed
-
-
MDEV-29911 InnoDB recovery and mariadb-backup --prepare fail to report detailed progress
-
- Closed
-
-
MDEV-31354 SIGSEGV in log_sort_flush_list() in InnoDB crash recovery
-
- Closed
-
-
MDEV-32042 Special handling of crash recovery in buf_page_get_gen() may cause overhead
-
- Closed
-
-
MDEV-32134 InnoDB hang in buf_flush_wait_LRU_batch_end()
-
- Closed
-